@@ -117,7 +117,7 @@ public class MultiIconNodeWrapper extends DefaultNodeWrapper implements CellObje
     // ge = null;
     //
     // if(isShowingIconText()) {
-    // ge = new GraphicsElement(new Integer(s.getLevel()), null, null,
+    // ge = new GraphicsElement(Integer.valueOf(s.getLevel()), null, null,
     // s.getSkillType().getID().toString());
     //
     // if(s.isLostSkill()) {
